# ethereum-spec-evm-resolver

./: .gitignore  README.md  setup.cfg
src/ethereum_spec_evm/: main.py
src/ethereum_spec_evm_resolver/: __init__.py  daemon.py  error_silencer.py  forks.py  main.py
