[metadata]
name = ethereum-spec-evm-resolver
description = EELS evm forwarding tool
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.5
url = https://github.com/petertdavies/ethereum-spec-evm-resolver
license_files =
    LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages =
    ethereum_spec_evm_resolver

package_dir =
    = src

python_requires = >=3.8
install_requires =
    pycryptodome>=3,<4
    coincurve>=20,<21
    typing_extensions>=4
    GitPython>=3.1.0,<3.2
    filelock>=3.15.1,<4
    platformdirs>=4.2,<5
    requests_unixsocket>=0.3.0
    urllib3 >= 1.26.0, < 2.0.0
    eth2spec @ git+https://github.com/ethereum/consensus-specs.git@d08a91cad5a8657e57750b7cfe3ac2178b3d9c0c

[options.entry_points]
console_scripts =
    ethereum-spec-evm-resolver = ethereum_spec_evm_resolver.main:main


