[metadata]
name = ethereum-spec-evm-resolver
description = EELS evm forwarding tool
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.5
url = https://github.com/petertdavies/ethereum-spec-evm-resolver
license_files =
    LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages =
    ethereum_spec_evm_resolver

package_dir =
    = src

python_requires = >=3.8
install_requires =
    pycryptodome>=3,<4
    coincurve>=20,<21
    typing_extensions>=4
    GitPython>=3.1.0,<3.2
    filelock>=3.15.1,<4
    platformdirs>=4.2,<5
    requests_unixsocket2>=0.4.0
    urllib3 >= 1.26.0, < 2.0.0
    py_ecc @ git+https://github.com/petertdavies/py_ecc.git@127184f4c57b1812da959586d0fe8f43bb1a2389
    pydantic >=2.9.2, <3

[options.entry_points]
console_scripts =
    ethereum-spec-evm-resolver = ethereum_spec_evm_resolver.main:main


